# Gate-OS

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Gate-OS-README.md  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md  TODO.md  index.html  mkdocs.yml  pyproject.toml  setup.cfg  sitemap.xml
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml
changelog/: index.html
contributing/: index.html
data/: gate-os-manager.desktop
diagrams/: index.html
docs/: README.md  changelog.md  contributing.md  index.md  release-checklist.md
examples/: README.md
examples/plugins/packaged_example/: README.md  pyproject.toml
examples/plugins/packaged_example/src/gateos_plugin_example/: __init__.py  hooks.py
gateos_manager/: __init__.py  cli.py  updater.py
gateos_manager.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
release-checklist/: index.html
rfcs/: README.md  TEMPLATE.md
scripts/: build-iso.sh  dev-check.sh  install-dde.sh  load-apparmor-profiles.sh  release.sh  setup-dev-env.sh  validate-manifests.sh
search/: search_index.json
tests/: conftest.py  test_api_server.py  test_auth.py  test_beta_release.py  test_cli_extended.py  test_container_manager_runtime.py  test_containers_and_watch.py  test_dde_panel.py  test_manifest_loader.py  test_manifest_schema_version.py  test_manifest_schema_version_packaged.py  test_mobile_companion.py  test_observability.py  test_packaging.py  test_perf_switch_latency.py  test_plugin_entrypoint_discovery.py  test_plugins_and_logging.py  test_rate_limit.py  (+15 more)
(+134 files in other folders)
