[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "gateos-manager"
version = "0.0.2"
description = "Gate-OS environment manager (early scaffold)"
requires-python = ">=3.10"
license = {text = "GPL-3.0-or-later"}
authors = [ { name = "Ultra Cube Tech" } ]
readme = "README.md"
dependencies = [
  "PyYAML>=6.0",
  "jsonschema>=4.21.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.1.0",
  # Include API stack for testing endpoints in CI
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.7.0",
  "watchdog>=4.0.0"
]
api = [
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.7.0"
]
watch = [
  "watchdog>=4.0.0"
]

[project.scripts]
gateos = "gateos_manager.cli:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E","F","I","B","UP","SIM","W"]
ignore = ["E203","E501"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true
